; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsvalue.c_js_newobjectx.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsvalue.c_js_newobjectx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JS_COBJECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @js_newobjectx(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @js_isobject(i32* %4, i32 -1)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @js_toobject(i32* %8, i32 -1)
  store i32* %9, i32** %3, align 8
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @js_pop(i32* %11, i32 1)
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* @JS_COBJECT, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @jsV_newobject(i32* %14, i32 %15, i32* %16)
  %18 = call i32 @js_pushobject(i32* %13, i32 %17)
  ret void
}

declare dso_local i64 @js_isobject(i32*, i32) #1

declare dso_local i32* @js_toobject(i32*, i32) #1

declare dso_local i32 @js_pop(i32*, i32) #1

declare dso_local i32 @js_pushobject(i32*, i32) #1

declare dso_local i32 @jsV_newobject(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
